# MMM_DEMO

./: .gitignore  CLAUDE.md  README.md  README.pt-BR.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_data_exploration.ipynb  02_model_fitting.ipynb  03_diagnostics.ipynb  04_contributions.ipynb  05_optimization.ipynb  06_report_data_science.ipynb  07_report_marketing.ipynb  08_report_management.ipynb
scripts/: run_pipeline.py
src/mmm_demo/: config.py  data.py  model.py  optimization.py  plotting.py
src/mmm_test/: __init__.py  config.py  data.py  diagnostics.py  model.py  plotting.py
tests/: conftest.py  test_config.py  test_data.py  test_diagnostics.py  test_model.py  test_optimization.py  test_plotting.py
